--- a/app/src/main/res/layout/activity_brain_detail.xml
+++ b/app/src/main/res/layout/activity_brain_detail.xml
@@ -14,7 +14,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/imageView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/nikola" />
 
     <TextView
         android:layout_width="wrap_content"
